--- a/Alzy/app/src/main/AndroidManifest.xml
+++ b/Alzy/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_carteira"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.DetalhesActivity"></activity>
+        <activity android:name=".activity.DetalhesActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppThemeDefault"/>
         <activity
             android:name=".activity.ReportActivity"
             android:screenOrientation="portrait"
