--- a/Alzy/app/build.gradle
+++ b/Alzy/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:18.0.0'
     //Auth:
     implementation 'com.google.firebase:firebase-auth:18.0.0'
+    //core:
+    implementation 'com.google.firebase:firebase-core:17.0.0'
 
     //--Frameworks--//
     //Materia-Intro:
