--- a/Alzy/app/src/main/AndroidManifest.xml
+++ b/Alzy/app/src/main/AndroidManifest.xml
@@ -9,7 +9,13 @@
         android:roundIcon="@mipmap/ic_carteira"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".pacoteauxiliar.AdapterMovimentacao"></activity>
+
+        <activity android:name=".pacoteauxiliar.AdapterMovimentacao" />
+
+        <activity android:name=".activity.CategoriasActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppThemeDefault" />
+
         <activity
             android:name=".activity.DetalhesActivity"
             android:screenOrientation="portrait"
