Ajustes de latout na activity principal e renomeado CategoriasActivityReceita.

--- a/Alzy/app/src/main/AndroidManifest.xml
+++ b/Alzy/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
         <activity android:name=".pacoteauxiliar.AdapterMovimentacao" />
 
-        <activity android:name=".activity.CategoriasActivity"
+        <activity android:name=".activity.CategoriasActivityReceita"
             android:screenOrientation="portrait"
             android:theme="@style/AppThemeDefault" />
 
