Criada Activity adicionar categoria.

--- a/Alzy/app/src/main/AndroidManifest.xml
+++ b/Alzy/app/src/main/AndroidManifest.xml
@@ -9,13 +9,14 @@
         android:roundIcon="@mipmap/ic_carteira"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".activity.AdicionaCategoriaActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppThemeDefault"/>
         <activity android:name=".pacoteauxiliar.AdapterMovimentacao" />
-
-        <activity android:name=".activity.CategoriasActivityReceita"
+        <activity
+            android:name=".activity.CategoriasActivityReceita"
             android:screenOrientation="portrait"
             android:theme="@style/AppThemeDefault" />
-
         <activity
             android:name=".activity.DetalhesActivity"
             android:screenOrientation="portrait"
