Upando testes. Adicionado recyclerView categorias.

--- a/Alzy/app/src/main/AndroidManifest.xml
+++ b/Alzy/app/src/main/AndroidManifest.xml
@@ -9,16 +9,15 @@
         android:roundIcon="@mipmap/ic_carteira"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.TesteCategoriasReceitaActivity"></activity>
+        <activity android:name=".activity.ListCategoriasActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppThemeDefault"></activity>
+        <activity android:name=".activity.TesteCategoriasReceitaActivity" />
         <activity
             android:name=".activity.AdicionaCategoriaActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppThemeDefault" />
         <activity android:name=".pacoteauxiliar.AdapterMovimentacao" />
-        <activity
-            android:name=".activity.CategoriasActivityReceita"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppThemeDefault" />
         <activity
             android:name=".activity.DetalhesActivity"
             android:screenOrientation="portrait"
